<resources>
    <string name="app_name">Ahorcado</string>
    <string name="bt_jugar">Jugar</string>
    <string name="tv_introducirNombre">¿Cómo te llamas?</string>
    <string name="tv_nombre"></string>
    <string name="et_nombre"></string>
    <string name="bt_ok">OK</string>
    <string name="nombre_vacio">Escribe tu nombre para poder continuar</string>
    <string name="dificultad_vacia">Por favor, elige una dificultad para poder continuar</string>
    <string name="tv_elegirDificultad">Elige la dificultad</string>
    <string name="bt_facil">Fácil</string>
    <string name="bt_normal">Normal</string>
    <string name="bt_dificil">difícil</string>
    <string name="bt_reiniciar">Volver a jugar</string>
    <string name="bt_ranking">Ranking</string>
    <string name="bt_cambiarDificultad">Cambiar la dificultad</string>
    <string name="bt_inicio">Inicio</string>
    <string name="tv_puntuacion">0</string>
    <string name="tv_resultado">-</string>
    <string name="textoGanado">¡Has ganado!</string>
    <string name="textoPerdido">¡Has perdido!</string>
    <string name="textoPuntuacion">Tu puntuación es: </string>
    <string name="textoMaximaPuntuacion">Tu mejor puntuación hasta ahora ha sido: </string>

    <string name="tv_palabra">_ _ _ _ _</string>

    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="ENE">Ñ</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="tv_ranking">Ranking</string>


    <string-array name="array_facil">
        <item>Cerdo</item>
        <item>Cuatro</item>
        <item>Masa</item>
        <item>Jabon</item>
        <item>Kilo</item>
        <item>Melon</item>
        <item>Pera</item>
        <item>Zumo</item>
        <item>Burro</item>
        <item>Fondo</item>
        <item>Balon</item>
        <item>Manzana</item>
        <item>Plato</item>
        <item>Vaso</item>
        <item>Padre</item>
        <item>Lapiz</item>
        <item>Folio</item>
        <item>Mar</item>
        <item>Cura</item>
        <item>Primo</item>
    </string-array>

    <string-array name="array_normal">
        <item>Golpear</item>
        <item>Fallar</item>
        <item>Disparar</item>
        <item>Sujetar</item>
        <item>Zanja</item>
        <item>Albañil</item>
        <item>Polvoron</item>
        <item>Colador</item>
        <item>Vajilla</item>
        <item>Familia</item>
        <item>Boligrafo</item>
        <item>Lapizero</item>
        <item>Profesor</item>
        <item>Montaña</item>
        <item>Oceano</item>
        <item>Ofender</item>
        <item>Nobleza</item>
        <item>Colonia</item>
        <item>Abuela</item>
        <item>Sirviente</item>
    </string-array>

    <string-array name="array_dificil">
        <item>Carruaje</item>
        <item>Terracota</item>
        <item>Antibiotico</item>
        <item>Diagnostico</item>
        <item>Ligamento</item>
        <item>Pantorrilla</item>
        <item>Omoplato</item>
        <item>Estimulación</item>
        <item>Motocicleta</item>
        <item>Asqueroso</item>
        <item>Utensilio</item>
        <item>Monasterio</item>
        <item>Homogeneo</item>
        <item>Comestible</item>
        <item>Pacífica</item>
        <item>Comerciante</item>
        <item>Callejero</item>
        <item>Matricula</item>
        <item>Omnivoro</item>
        <item>Exhumacion</item>
    </string-array>
</resources>
