<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#396250"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_cambiarDificultad"
            android:layout_width="269dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/boton_dialogue"
            android:fontFamily="@font/font"
            android:text="@string/bt_cambiarDificultad"
            android:textAlignment="center"
            android:textColor="#2C692F"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_reiniciar"
            android:layout_width="215dp"
            android:layout_height="65dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/boton_dialogue"
            android:fontFamily="@font/font"
            android:text="@string/bt_reiniciar"
            android:textAlignment="center"
            android:textColor="#2C692F"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_ranking"
            android:layout_width="166dp"
            android:layout_height="59dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/boton_dialogue"
            android:fontFamily="@font/font"
            android:text="@string/bt_ranking"
            android:textAlignment="center"
            android:textColor="#2C692F"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>