<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoverde"
    tools:context=".NombreActivity">

    <TextView
        android:id="@+id/tv_comoTeLlamas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/pigment"
        android:text="@string/tv_introducirNombre"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/et_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColorHint="#7E9484"
        android:theme="@style/MyEditText"
        app:layout_constraintBottom_toTopOf="@+id/bt_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_comoTeLlamas" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="114dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/boton_clickeado_tam_1"
        android:fontFamily="@font/pigment"
        android:shadowColor="#00B11D1D"
        android:text="@string/bt_ok"
        android:textColor="#8BC34A"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_lapiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <ImageView
        android:id="@+id/iv_letras"
        android:layout_width="111dp"
        android:layout_height="57dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_lapiz"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/letras" />

    <ImageView
        android:id="@+id/iv_lapiz"
        android:layout_width="84dp"
        android:layout_height="88dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_letras"
        app:srcCompat="@drawable/lapiz" />
</androidx.constraintlayout.widget.ConstraintLayout>